# AgileX-Tracer-Lidar-SLAM-

./: README.md
tracer_description/launch/: display_models.launch  tracer_stock.launch
tracer_description/urdf/: simple_lidar.urdf.save  tracer_v1 (another copy).urdf  tracer_v1.urdf.save  tracer_v1.urdf.save.1  tracer_v1.urdf.save.2  tracer_v1.urdf.save.3  tracer_v1.urdf.save.4  tracer_v1.urdf.save.5  tracer_v1.urdf.save.6  tracer_v1.urdf.save.7  tracer_v1.urdf.save.8
tracer_gazebo_sim/: CMakeLists.txt
tracer_gazebo_sim/config/: global_costmap_params.yaml  local_costmap_params.yaml  pid_gains.yaml
tracer_gazebo_sim/launch/: 11tracer_empty_world.launch  amcl.launch  tracer_empty_world (3rd copy).launch  tracer_empty_world (another copy).launch
tracer_gazebo_sim/maps/: map.yaml
tracer_gazebo_sim/scripts/: ground_truth_listener.py
tracer_gazebo_sim/src/: lidar_merge_node.py  odometry_publisher.cpp
